...
      builder: (context, fontSizeProvider, child) {
        return Semantics(
          label: 'E-Mail Eingabefeld',
          hint: 'Geben Sie Ihre E-Mail Adresse ein',
          textField: true,
          child: TextField(
            key: const Key('usernameField'),
            controller: _emailController,
            focusNode: _emailFocusNode,
            keyboardType: TextInputType.text,
            textInputAction: TextInputAction.next,
            enableInteractiveSelection: true,
            enableSuggestions: true,
...
        return Semantics(
          label: 'Passwort Eingabefeld',
          hint:
              'Geben Sie Ihr Passwort ein. Sichtbarkeit kann mit dem Symbol geändert werden.',
          textField: true,
          child: TextField(
            key: const Key('passwordField'),
            controller: _passwordController,
            focusNode: _passwordFocusNode,
            obscureText: !_isPasswordVisible,
            textInputAction: TextInputAction.done,
            style: UIStyles.formLabelStyle.copyWith(
              fontSize:
...
  }

  Widget _buildLoginButton() {
    return SizedBox(
      width: double.infinity,
      child: ElevatedButton(
        key: const Key('loginButton'),
        onPressed: _isLoading ? null : _handleLogin,
        style: UIStyles.defaultButtonStyle,
        child: SizedBox(
          height:
              UIConstants
                  .defaultButtonHeight, // Match the minimumSize height from defaultButtonStyle
...
