...
            const PopupMenuItem<String>(
              value: 'startseite',
              child: Text('Startseite'),
            ),
            const PopupMenuItem<String>(
              value: 'digitaler_schuetzenausweis',
              child: Text('Digitaler Schützenausweis'),
            ),
            const PopupMenuItem<String>(
              value: 'aenderung_schuetzenausweis',
              child: Text('Änderung Schützenausweis'),
            ),
            const PopupMenuItem<String>(
...
            const PopupMenuItem<String>(
              value: 'oktoberfestlandesschiessen',
              child: Text('Oktoberfestlandesschiessen'),
            ),
            const PopupMenuItem<String>(
              value: 'logout',
              child: Text('Abmelden'),
            ),
          ];
        }
      },
      icon: const Icon(Icons.menu),
    );
...
